src/fixtures/errors/error-value.lua
function f()
  error({ a = 1 })
  return true
end

return f
